# ics-spec

./: .env.example  .gitignore  APPENDIX-A.md  APPENDIX-B.md  APPENDIX-C.md  COMPARISON.md  DEVELOPER.md  ICS-v0.1.md  LICENSE  RATIONALE.md  README.md  TOOLCHAIN.md  demo_app.py  experiments.md  ics_autoclassifier.py  ics_constraint_parser.py  ics_demo.py  ics_diff.py  ics_linter.py  ics_live_test.py  ics_prompt.py  ics_prompt.ts  ics_quality_bench.py  ics_report.py  ics_scaffold.py  ics_sdk.py  ics_token_analyzer.py  ics_validator.py  paper.tex  pyproject.toml  references.bib  results_exp10_r1.json  results_exp10_r8.json  results_post_fix.json  results_quality.json  results_quality_r8.json  results_quality_regression.json  results_quality_v2.json  test_ics_constraint_parser.py  test_ics_diff.py  (+4 more)
.github/workflows/: ci.yml
examples/: agent-loop-code-review.ics  content-moderation.ics  log-analysis.ics  payments-platform.ics  rag-knowledge-base.ics
ics-runtime/: .env.example  .gitignore  README.md  pyproject.toml
ics-runtime/demo/bfsi_agent/: agent_definition.py  main.py  schemas.py  tools.py
ics-runtime/ics_runtime/: __init__.py  exceptions.py
ics-runtime/ics_runtime/contracts/: capability_enforcer.py  output_contract.py  violation.py
ics-runtime/ics_runtime/core/: agent.py  result.py  session.py
ics-runtime/ics_runtime/observability/: metrics.py  recorder.py
ics-runtime/ics_runtime/prompt/: builder.py
ics-runtime/ics_runtime/providers/: anthropic.py  base.py  openai.py
ics-runtime/ics_runtime/session_backends/: base.py  memory.py  redis_backend.py  sqlite_backend.py
ics-runtime/ics_runtime/tools/: decorator.py  registry.py  schema.py
ics-runtime/java/: pom.xml
ics-runtime/java/src/main/java/io/ics/runtime/: Agent.java  ContractViolationException.java  ICSRuntimeException.java  RunResult.java  Session.java  ToolCallRecord.java  Violation.java
ics-runtime/java/src/main/java/io/ics/runtime/backends/: MemoryBackend.java  SQLiteBackend.java  SessionBackend.java  SessionData.java
ics-runtime/java/src/main/java/io/ics/runtime/contracts/: CapabilityEnforcer.java  OutputContract.java  ValidationOutcome.java
ics-runtime/java/src/main/java/io/ics/runtime/demo/: BFSIDemo.java
ics-runtime/java/src/main/java/io/ics/runtime/observability/: SessionMetrics.java
ics-runtime/java/src/main/java/io/ics/runtime/prompt/: PromptBuilder.java
ics-runtime/java/src/main/java/io/ics/runtime/providers/: AnthropicProvider.java  OpenAIProvider.java  ProviderBase.java  ProviderMessage.java  ProviderResponse.java
ics-runtime/java/src/main/java/io/ics/runtime/tools/: ToolDefinition.java  ToolDeniedException.java  ToolRegistry.java
ics-runtime/java_web_demo/: dependency-reduced-pom.xml  pom.xml
ics-runtime/java_web_demo/src/main/java/io/ics/webdemo/: AgentManager.java  LogBus.java  WebDemo.java
ics-runtime/java_web_demo/src/main/resources/static/: index.html
ics-runtime/tests/unit/: test_capability_enforcer.py  test_metrics.py  test_output_contract.py  test_prompt_builder.py  test_session_backends.py  test_sqlite_backend.py  test_tool_decorator.py
ics-runtime/web_demo/: app.py  index.html
web_app/: app.py  index.html
