[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ics-runtime"
version = "0.1.0"
description = "Production execution layer for ICS (Intelligent Context Structuring) prompts"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "anthropic>=0.25.0",
    "pydantic>=2.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]
redis = ["redis>=5.0"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "anthropic>=0.25.0",
    "openai>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["ics_runtime"]
